# advent_of_code_2021

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
aoc_utils/: Cargo.toml
aoc_utils/src/: dijkstra.rs  lib.rs  nom_helpers.rs
day01/src/: main.rs
day02/src/: main.rs
day03/src/: main.rs
day04/src/: main.rs
day05/: Cargo.toml
day05/src/: main.rs
day06/src/: main.rs
day07/src/: main.rs
src/: aoc_cli.rs  lib.rs  main.rs  path.rs  runner.rs  template.txt
src/aoc_cli/: commands.rs  date.rs  mod.rs  path.rs  runner.rs
