[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aoc_utils = { git = "https://github.com/dsmtE/aoc_utils" }
nom = "7.1.1"
rayon = "1.6.0"
regex = "1.10.2"
itertools = "0.12.0"
num = "0.4.1"

# Overriding repository URL to work with git submodules
[patch."https://github.com/dsmtE/aoc_utils"]
aoc_utils = { path = "crates/aoc_utils" }

[[bin]]
name = "day01"
path = "src/bin/day01.rs"

[[bin]]
name = "day02"
path = "src/bin/day02.rs"

[[bin]]
name = "day03"
path = "src/bin/day03.rs"

[[bin]]
name = "day04"
path = "src/bin/day04.rs"

[[bin]]
name = "day05"
path = "src/bin/day05.rs"

[[bin]]
name = "day06"
path = "src/bin/day06.rs"

[[bin]]
name = "day07"
path = "src/bin/day07.rs"

[[bin]]
name = "day08"
path = "src/bin/day08.rs"

[[bin]]
name = "day09"
path = "src/bin/day09.rs"

[[bin]]
name = "day10"
path = "src/bin/day10.rs"

[[bin]]
name = "day11"
path = "src/bin/day11.rs"

[[bin]]
name = "day13"
path = "src/bin/day13.rs"

[[bin]]
name = "day15"
path = "src/bin/day15.rs"

[[bin]]
name = "day17"
path = "src/bin/day17.rs"

[[bin]]
name = "day18"
path = "src/bin/day18.rs"