[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
authors = ["Enguerrand DE SMET <https://github.com/dsmtE>"]

default-run = "advent_of_code"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }


[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1