[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
authors = ["Enguerrand DE SMET <https://github.com/dsmtE>"]

default-run = "advent_of_code"

[dependencies]
aoc_utils = { git = "https://github.com/dsmtE/aoc_utils" }
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
itertools = "0.13.0"
nom = "7.1.3"
pathfinding = "4.12.0"
rayon = "1.10.0"

# Overriding repository URL to work with git submodules
[patch."https://github.com/dsmtE/aoc_utils"]
aoc_utils = { path = "crates/aoc_utils" }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
